public class AnimationStrings
{
   public static string lightAttack = "LightAttack";
   public static string isHit = "IsHit";
   public static string isDead = "IsDead";
   public static string isFalling = "IsFalling";
   public static string isGrounded = "IsGrounded";
   public static string moveDirectionX = "MoveDirectionX";
   public static string moveDirectionY = "MoveDirectionY";

}
